<resources>

    <string name="app_name">G图鉴</string>
    <string name="shortcut_cultivation_short_label">我的世界</string>
    <string name="shortcut_cultivation_long_label">大千世界</string>
    <string name="header_img"></string>
    <string name="header_nid">No.</string>
    <string name="header_id">ID</string>
    <string name="header_name">Name</string>
    <string name="header_frontname">F.Name</string>
    <string name="header_attr">属</string>
    <string name="header_level">星</string>
    <string name="header_cost">C.</string>
    <string name="header_hp">HP</string>
    <string name="header_attack">A.</string>
    <string name="header_defense">D.</string>
    <string name="header_extra1">E1</string>
    <string name="header_extra2">E2</string>
    <string name="save">保存</string>
    <string name="add">+</string>
    <string name="search">检索</string>
    <string name="delete">删除</string>
    <string name="dialog_set">设置</string>
    <string name="menu_out">导出数据</string>
    <string name="menu_game_list">游戏列表</string>
    <string name="menu_create_header">生成头像</string>
    <string name="create">生成</string>
    <string name="cover">覆盖</string>
    <string name="set1">整体图1</string>
    <string name="set2">整体图2</string>
    <string name="set3">数值图</string>
    <string name="float_home">主屏幕</string>
    <string name="up">up</string>
    <string name="hg">HG</string>
    <string name="supplement">补</string>
    <string name="modify">更正</string>
    <string name="profile">头像</string>

    <string name="arrow">▼</string>
    <string name="arrowLast">▲</string>

    <string name="set_attr">属性设置</string>
    <string name="set_Defense">防御显示与否</string>E
    <string name="menu_event_list">活动列表</string>
    <string name="menu_event_delete">删除数据</string>

    <string name="gameinfo_orientation">横版图</string>
    <string name="gameinfo_orientation_e">横版活动图</string>
    <string name="gameinfo_event_images_gap">图间距</string>
    <string name="gameinfo_images_date">图日期</string>
    <string name="gameinfo_cost_show">Cost</string>

    <string name="menu_web_view">H5</string>
    <string name="menu_flutter">Flutter</string>
    <string name="menu_game">Xian</string>
    <string name="menu_emperor">Di</string>
    <string name="menu_theme">主题</string>

    <string name="cultivation_menu">菜单</string>
    <string name="cultivation_multi">1000人</string>
    <string name="cultivation_nation">联盟</string>
    <string name="cultivation_list">人物</string>
    <string name="cultivation_clan">家族</string>
    <string name="cultivation_bang">门派</string>
    <string name="cultivation_save">保存</string>
    <string name="cultivation_stop">暂停</string>
    <string name="cultivation_start">开始</string>
    <string name="cultivation_title_emperor">皇帝:</string>
    <string name="cultivation_title_taiwei">[太尉:</string>
    <string name="cultivation_title_shangshu">[尚书:</string>
    <string name="cultivation_title_cishi">刺史:</string>
    <string name="cultivation_title_duwei">都尉:</string>
    <string name="emperor_interact">互</string>
    <string name="title_activity_flutter">FlutterActivity</string>
</resources>
