<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
     <item
        android:id="@+id/menu_out"
        android:orderInCategory="100"
        android:title="@string/menu_out"/>
	<item
        android:id="@+id/menu_gamelist"
        android:orderInCategory="200"
        android:title="@string/menu_game_list"/>
	<item
        android:id="@+id/menu_header"
        android:orderInCategory="300"
        android:title="@string/menu_create_header"/>

	<item
		android:id="@+id/menu_delete"
		android:orderInCategory="500"
		android:title="@string/menu_event_delete"/>

	<item
		android:id="@+id/action_h5"
		android:orderInCategory="800"
		android:title="@string/menu_web_view"/>

	<item
		android:id="@+id/action_flutter"
		android:orderInCategory="850"
		android:title="@string/menu_flutter"/>

	<item
		android:id="@+id/action_game"
		android:orderInCategory="900"
		android:title="@string/menu_game"/>

	<item
		android:id="@+id/action_emperor"
		android:orderInCategory="950"
		android:title="@string/menu_emperor"/>

	<item
		android:id="@+id/action_theme"
		android:orderInCategory="1500"
		android:title="@string/menu_theme"/>
</menu>
